--- a/bootstrap-practise/template.html
+++ b/bootstrap-practise/template.html
@@ -28,6 +28,21 @@
             .view-more:hover:after{
               width: 100%;
             }
+
+            @media only screen and (max-width: 600px) {
+              .align-for-small-screen{
+                width: 100%;
+                font-size: 30px !important;
+                text-align: center !important;
+              }
+              .center-on-small-screen{
+                text-align: center !important;
+                padding: 0px !important;
+              }
+              .height-on-small-screen{
+                height: 25% !important;
+              }
+            }
         </style>
     </head>
     <body>
@@ -77,5 +92,49 @@
             </div>
         </div>
       </section>
+      <section>
+        <div class="container-fluid">
+            <div class="row h-50">
+                <div class="height-on-small-screen col-md-6 h-100 d-flex flex-row w-100  align-items-center">
+                    <h1 class="align-for-small-screen" style="font-size:55px; font-weight:400; text-align: end; color:#3D626C;">A new way to create desgin for you</h1>
+                </div>
+                <div class="height-on-small-screen col-md-6 h-100 w-100 d-flex flex-column justify-content-center ">
+                    <p class="center-on-small-screen pr-5" style="font-size: 18px; color: #3D626C;">Lorem ipsum dolor sit amet, consectetur adipiscing elitdo eiusmod temporeum dicant partem scripserit. Lorem ipsum dolor sit amet, consec tetur adipiscing elit adipiscing elitdo </p>
+                    <span class="center-on-small-screen"><b>VIEW MORE</b></span>
+                </div>
+            </div>
+        </div>
+      </section>
+      <section style="background-color: antiquewhite;">
+        <h1 class="text-center" style="color:#3D626C;">Make Your Style Today</h1>
+        <div class="container">
+            <div class="row mt-5 mb-5">
+                <div class="col-md-6 d-flex flex-column align-items-md-start align-items-center mb-3">
+                    <img src="https://mobirise.com/extensions/personam4/assets/images/mbr-1.jpg" style="width: 100%; height: 400px;"/>
+                    <span style="font-size: 25px; font-weight: bold; color: #3D626C;">Ideas</span>
+                    <span>Projects</span>
+                </div>
+               <div class="col-md-5 d-flex flex-column offset-md-1 align-items-md-start align-items-center mb-3">
+                    <img src="https://mobirise.com/extensions/personam4/assets/images/mbr-4.jpg" style="width: 100%; height: 400px;"/>
+                    <span style="font-size: 25px; font-weight: bold; color: #3D626C;">Skills</span>
+                    <span>Protfolio</span>
+                </div>
+            </div>
+
+            <div class="row mt-5 mb-5">
+                 <div class="col-md-5 d-flex flex-column align-items-md-start align-items-center mb-3">
+                    <img src="https://mobirise.com/extensions/personam4/assets/images/mbr-2.jpg" style="width: 100%; height: 400px;"/>
+                    <span style="font-size: 25px; font-weight: bold; color: #3D626C;">Team</span>
+                    <span>Projects</span>
+                </div>
+                <div class="col-md-6 d-flex flex-column align-items-md-start align-items-center offset-md-1 mb-3">
+                    <img src="	https://mobirise.com/extensions/personam4/assets/images/mbr-3.jpg" style="width: 100%; height: 400px;"/>
+                    <span style="font-size: 25px; font-weight: bold; color: #3D626C;">Works</span>
+                    <span>Portfolio</span>
+                </div>
+              
+            </div>
+        </div> 
+     </section>
     </body>
 </html>
