conditional operator and if-else update

--- a/js/p9.html
+++ b/js/p9.html
@@ -5,7 +5,7 @@
        b.  post-increment:- post-increment first assign the value then increment by one
     */
     var a = 10;
-    //var b = ++a;
-    var b = a++; 
+    //var b = ++a;--> a = a + 1; b = a;
+    var b = a++; // ---> b = a; a = a + 1
     document.write("a : "+a+"  b : "+b);
 </script>
