--- a/js/loop2.html
+++ b/js/loop2.html
@@ -14,6 +14,15 @@
     var i = 1;
     while(i<=10){
         document.write("<br>"+n+" X "+i+" = "+(n*i));
+        /*
+            "<br>"+n 
+            "<br>5"+" X "
+            "<br>5  X "+i
+            "<br>5 X 1"+" = "
+            "<br>5 X 1 = "+(n*i)
+            "<br>5 X 1 = 10"
+            document.write("<br>5 X 1 = 10");
+        */
         i++;
     }
 </script>
