arra of object update

--- a/js/array/arr3.html
+++ b/js/array/arr3.html
@@ -21,5 +21,7 @@
 
     arr.splice(2,1);
     document.write("<br>After splice : "+arr);
-    
+
+    arr.splice(1,1,1000,2000,3000);
+    document.write("<br>"+arr);
 </script>
