--- a/js/function/fun13.html
+++ b/js/function/fun13.html
@@ -7,6 +7,6 @@
         }
     }
 
-    var result = f1(2)(3)(4);
+    var result = f1(2)(3)(4); // javascript currying
     document.write("Result : "+result);
 </script>
